# HeatPump

./: .env  .gitattributes  .gitignore  .vercelignore  PIPELINE_GUIDE.md  PRODUCTION_READINESS_AUDIT.md  README.md  admin_app.py  app.py  customer_app.py  main.py  pyproject.toml  requirements.txt  ruff_report.txt  streamlit_app.py  vercel.json
.github/: copilot_instructions.md
api/: index.py  requirements.txt
docs/: COMPLETE_PROJECT_FLOW.md  CUSTOMER_APP_DETAILED_DOCUMENTATION.md  PIPELINE_TEACHING_GUIDE.md  SOURCE_CODE_GUIDE.md  UI_INPUT_SPECIFICATIONS.md  VERCEL_DEPLOYMENT_GUIDE.md
models/: feature_schema_v20260325.json  feature_schema_v20260326.json  feature_schema_v20260327_154704_472255_enhanced_onestep.json  feature_schema_v20260329_202819_102731_enhanced_onestep.json  feature_schema_v20260418_101037_965018_enhanced_onestep.json  imputer_elec_v20260325.joblib  imputer_elec_v20260327_151612_057575_enhanced_onestep.joblib  imputer_elec_v20260327_151744_164652_enhanced_onestep.joblib  imputer_elec_v20260327_154704_472255_enhanced_onestep.joblib  imputer_elec_v20260327_154809_982085_enhanced_onestep.joblib  imputer_elec_v20260329_202819_102731_enhanced_onestep.joblib  imputer_elec_v20260418_101037_965018_enhanced_onestep.joblib  imputer_elec_v20260425_074520_895518_enhanced_onestep.joblib  imputer_heat_v20260325.joblib  imputer_heat_v20260326.joblib  imputer_heat_v20260327_151612_057575_enhanced_onestep.joblib  imputer_heat_v20260327_151744_164652_enhanced_onestep.joblib  imputer_heat_v20260327_154704_472255_enhanced_onestep.joblib  latest_monitoring_summary.json  (+62 more)
(+49 files in other folders)
