[project]
name = "heatpump"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "joblib>=1.4.2",
    "numpy>=2.4.2",
    "pandas>=2.2.0,<3.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "streamlit>=1.44.0",
    "uvicorn>=0.35.0",
    "xgboost>=3.2.0",
]
